{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 21,
  "lineage": "7eb9695b-9f47-5222-012e-b481bc764df9",
  "resources": [
    {
      "module": "module.vpc_main",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024e230edb3423ab5",
            "association_id": "eipassoc-0314cc2d61cf1d60d",
            "domain": "vpc",
            "id": "eipalloc-024e230edb3423ab5",
            "network_border_group": "il-central-1",
            "network_interface": "eni-0a042bf2de1209d88",
            "private_dns": "ip-10-10-10-194.il-central-1.compute.internal",
            "private_ip": "10.10.10.194",
            "public_dns": "ec2-51-16-202-181.il-central-1.compute.amazonaws.com",
            "public_ip": "51.16.202.181",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elastic_IP-Project_K8S-Kubernetes-1"
            },
            "tags_all": {
              "Name": "Elastic_IP-Project_K8S-Kubernetes-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a2db0233245ca437",
            "association_id": "eipassoc-041a2071bc6cdbdf8",
            "domain": "vpc",
            "id": "eipalloc-0a2db0233245ca437",
            "network_border_group": "il-central-1",
            "network_interface": "eni-04790e9e097d6c17b",
            "private_dns": "ip-10-10-11-180.il-central-1.compute.internal",
            "private_ip": "10.10.11.180",
            "public_dns": "ec2-51-17-153-162.il-central-1.compute.amazonaws.com",
            "public_ip": "51.17.153.162",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elastic_IP-Project_K8S-Kubernetes-2"
            },
            "tags_all": {
              "Name": "Elastic_IP-Project_K8S-Kubernetes-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_main",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:429849212683:internet-gateway/igw-05493ebac03e80cad",
            "id": "igw-05493ebac03e80cad",
            "owner_id": "429849212683",
            "tags": {
              "Name": "Internet_Gateway-Project_K8S"
            },
            "tags_all": {
              "Name": "Internet_Gateway-Project_K8S"
            },
            "vpc_id": "vpc-0e0b7e966d120006b"
          },
          "dependencies": [
            "module.vpc_main.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024e230edb3423ab5",
            "association_id": "eipassoc-0314cc2d61cf1d60d",
            "connectivity_type": "public",
            "id": "nat-00b3dca49e5644bad",
            "network_interface_id": "eni-0a042bf2de1209d88",
            "private_ip": "10.10.10.194",
            "public_ip": "51.16.202.181",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dfb68b14c281e74c",
            "tags": {
              "Name": "NAT-Gateway-Project_K8S-Kubernetes-1"
            },
            "tags_all": {
              "Name": "NAT-Gateway-Project_K8S-Kubernetes-1"
            }
          },
          "dependencies": [
            "module.vpc_main.aws_eip.nat",
            "module.vpc_main.aws_subnet.public_subnet",
            "module.vpc_main.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a2db0233245ca437",
            "association_id": "eipassoc-041a2071bc6cdbdf8",
            "connectivity_type": "public",
            "id": "nat-06e91363ed84226f7",
            "network_interface_id": "eni-04790e9e097d6c17b",
            "private_ip": "10.10.11.180",
            "public_ip": "51.17.153.162",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08032beb4b8972b80",
            "tags": {
              "Name": "NAT-Gateway-Project_K8S-Kubernetes-2"
            },
            "tags_all": {
              "Name": "NAT-Gateway-Project_K8S-Kubernetes-2"
            }
          },
          "dependencies": [
            "module.vpc_main.aws_eip.nat",
            "module.vpc_main.aws_subnet.public_subnet",
            "module.vpc_main.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_tables_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:429849212683:route-table/rtb-046f3cc1433c3f1dc",
            "id": "rtb-046f3cc1433c3f1dc",
            "owner_id": "429849212683",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00b3dca49e5644bad",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route_Tables_Private-Project_K8S-Kubernetes-1"
            },
            "tags_all": {
              "Name": "Route_Tables_Private-Project_K8S-Kubernetes-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0b7e966d120006b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_main.aws_eip.nat",
            "module.vpc_main.aws_nat_gateway.nat",
            "module.vpc_main.aws_subnet.public_subnet",
            "module.vpc_main.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:429849212683:route-table/rtb-0d3e15cdeda6bd8ee",
            "id": "rtb-0d3e15cdeda6bd8ee",
            "owner_id": "429849212683",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-06e91363ed84226f7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route_Tables_Private-Project_K8S-Kubernetes-2"
            },
            "tags_all": {
              "Name": "Route_Tables_Private-Project_K8S-Kubernetes-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0b7e966d120006b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_main.aws_eip.nat",
            "module.vpc_main.aws_nat_gateway.nat",
            "module.vpc_main.aws_subnet.public_subnet",
            "module.vpc_main.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_tables_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:429849212683:route-table/rtb-00e0507bf99e5d21a",
            "id": "rtb-00e0507bf99e5d21a",
            "owner_id": "429849212683",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05493ebac03e80cad",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route_Tables_Public-Project_K8S-Kubernetes"
            },
            "tags_all": {
              "Name": "Route_Tables_Public-Project_K8S-Kubernetes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0b7e966d120006b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_main.aws_internet_gateway.internet_gateway",
            "module.vpc_main.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031ecba08602d1cbf",
            "route_table_id": "rtb-046f3cc1433c3f1dc",
            "subnet_id": "subnet-057f17a3c55b08527"
          },
          "dependencies": [
            "module.vpc_main.aws_eip.nat",
            "module.vpc_main.aws_nat_gateway.nat",
            "module.vpc_main.aws_route_table.route_tables_private",
            "module.vpc_main.aws_subnet.private_subnet",
            "module.vpc_main.aws_subnet.public_subnet",
            "module.vpc_main.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064a3838d04522ea4",
            "route_table_id": "rtb-0d3e15cdeda6bd8ee",
            "subnet_id": "subnet-04fe918b1fe9916d0"
          },
          "dependencies": [
            "module.vpc_main.aws_eip.nat",
            "module.vpc_main.aws_nat_gateway.nat",
            "module.vpc_main.aws_route_table.route_tables_private",
            "module.vpc_main.aws_subnet.private_subnet",
            "module.vpc_main.aws_subnet.public_subnet",
            "module.vpc_main.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086d7912c2adae5ab",
            "route_table_id": "rtb-00e0507bf99e5d21a",
            "subnet_id": "subnet-0dfb68b14c281e74c"
          },
          "dependencies": [
            "module.vpc_main.aws_internet_gateway.internet_gateway",
            "module.vpc_main.aws_route_table.route_tables_public",
            "module.vpc_main.aws_subnet.public_subnet",
            "module.vpc_main.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055dc71446c23886d",
            "route_table_id": "rtb-00e0507bf99e5d21a",
            "subnet_id": "subnet-08032beb4b8972b80"
          },
          "dependencies": [
            "module.vpc_main.aws_internet_gateway.internet_gateway",
            "module.vpc_main.aws_route_table.route_tables_public",
            "module.vpc_main.aws_subnet.public_subnet",
            "module.vpc_main.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:429849212683:subnet/subnet-057f17a3c55b08527",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "10.10.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057f17a3c55b08527",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "429849212683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet_Private-Project_K8S-Kubernetes-1"
            },
            "tags_all": {
              "Name": "Subnet_Private-Project_K8S-Kubernetes-1"
            },
            "vpc_id": "vpc-0e0b7e966d120006b"
          },
          "dependencies": [
            "module.vpc_main.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:429849212683:subnet/subnet-04fe918b1fe9916d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "10.10.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fe918b1fe9916d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "429849212683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet_Private-Project_K8S-Kubernetes-2"
            },
            "tags_all": {
              "Name": "Subnet_Private-Project_K8S-Kubernetes-2"
            },
            "vpc_id": "vpc-0e0b7e966d120006b"
          },
          "dependencies": [
            "module.vpc_main.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:429849212683:subnet/subnet-0dfb68b14c281e74c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfb68b14c281e74c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "429849212683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet_Public-Project_K8S-Kubernetes-1"
            },
            "tags_all": {
              "Name": "Subnet_Public-Project_K8S-Kubernetes-1"
            },
            "vpc_id": "vpc-0e0b7e966d120006b"
          },
          "dependencies": [
            "module.vpc_main.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:429849212683:subnet/subnet-08032beb4b8972b80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1c",
            "availability_zone_id": "ilc1-az3",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08032beb4b8972b80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "429849212683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet_Public-Project_K8S-Kubernetes-2"
            },
            "tags_all": {
              "Name": "Subnet_Public-Project_K8S-Kubernetes-2"
            },
            "vpc_id": "vpc-0e0b7e966d120006b"
          },
          "dependencies": [
            "module.vpc_main.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_main",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:429849212683:vpc/vpc-0e0b7e966d120006b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0905dff80dc95f498",
            "default_route_table_id": "rtb-04cb5050b25a65f51",
            "default_security_group_id": "sg-09d9bf9dd391b0234",
            "dhcp_options_id": "dopt-0ec604c75ba197930",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e0b7e966d120006b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04cb5050b25a65f51",
            "owner_id": "429849212683",
            "tags": {
              "Name": "VPC-Project_K8S"
            },
            "tags_all": {
              "Name": "VPC-Project_K8S"
            }
          }
        }
      ]
    }
  ]
}